// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power Fx Functions [CountIf error1] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, >= 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "hidden": false,
    "name": "CountIf",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hidden": false,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "hidden": false,
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hidden": false,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "hidden": false,
    "name": ">=",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hidden": false,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hidden": false,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Power Fx Functions [CountIf ok] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 >= 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "hidden": false,
    "name": "CountIf",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hidden": false,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "hidden": false,
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hidden": false,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "hidden": false,
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "display": ".",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "hidden": false,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "display": "first",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "hidden": false,
    "name": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "hidden": false,
    "name": ">=",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "boolean",
  },
  Object {
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hidden": false,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hidden": false,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;
